# talon

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
core/: keys.py  keys.talon  phrases.py  phrases.talon
keymaps/: arrow_keys.yaml  function_keys.yaml  letter_keys.yaml  special_keys.yaml
overrides/: keys.py
src/core/: generic_editor.talon  keys.py  keys.talon  numbers.talon  phrases.py  repeater.talon
src/keymaps/: function_keys.yaml  modifier_keys.yaml  number_keys.yaml  symbol_keys.yaml
src/modes/: sleep_mode.talon  sleep_mode_wav2letter.talon
